文档的目录结构

--- a/shape_jQuery/01/001.html
+++ b/shape_jQuery/01/001.html
@@ -3,9 +3,14 @@
 <head>
 	<title>jQuery初始化方法</title>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="../resources/js/commom/jquery-3.1.0.min.js"></script>
+	<script type="text/javascript" src="../resources/js/common/jquery-3.1.0.min.js"></script>
 </head>
 <body>
 
 </body>
+<script type="text/javascript">
+	$(function(){
+		alert("该html页面dom已经加载完成");
+	})
+</script>
 </html>
