表单的操作
表单的操作

--- a/shape_jQuery/05/002.html
+++ b/shape_jQuery/05/002.html
@@ -12,27 +12,31 @@
 	</style>
 </head>
 <body>
-<div class="msg">
-	<div class="mag_controll">
-		<span id="bigger">放大</span>
-		<span id="smaller">缩小</span>
-	</div>	
-</div>
-<form action="#">
-	<textarea id="comment" cols="20" rows="8">1234567800qazwsedrcjkkalhgj</textarea>
-</form>
+	<div class="msg">
+		<div class="mag_controll">
+			<span id="bigger">放大</span>
+			<span id="smaller">缩小</span>
+		</div>	
+	</div>
+	<form action="#">
+		<textarea id="comment" cols="20" rows="8">1234567800qazwsedrcjkkalhgj</textarea>
+	</form>
 </body>
 <script type="text/javascript">
 	$(function(){
 		$('#bigger').click(function(){
-			if ($('#comment').height()<500) {
-				$('#comment').css('height','+=30');
+			if (!$('#comment').is(':animated')) {
+				if ($('#comment').height()<500) {
+					$('#comment').animate({'height':'+=30'},3000);
+				}
 			}
 		});
 
 		$('#smaller').click(function(){
-			if ($('#comment').height()>50) {
-				$('#comment').css('height','-=30');
+			if (!$('#comment').is(':animated')) {
+				if ($('#comment').height()>50) {
+					$('#comment').css('height','-=30');
+				}
 			}
 		});
 	});
